# alignment

./: .gitignore
alignment-graphs/: README.md  alignment-graphs.cabal  stack.yaml  test.yaml
alignment-graphs/app/: Main.hs
alignment-graphs/src/: .#InputParsing.hs  Agent.hs  DB.hs  Lib.hs  Location.hs  Objective.hs  POI.hs  Simulation.hs  Types.hs  World.hs
alignment-graphs/test/: Location_Test.hs  Spec.hs
