name:                alignment-graphs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eklinkhammer/alignment-graphs#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Klinkhammer
maintainer:          eklinkhammer@gmail.com
copyright:           2017 Eric Klinkhammer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , Location
                     , Agent
                     , Objective
                     , World
                     , POI
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , random-fu
                     , normaldistribution
                     , random
                     , aeson
                     , yaml
                     , text
  default-language:    Haskell2010

executable alignment-graphs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , alignment-graphs
                     , text
                     , aeson
                     , yaml
                     , bytestring
                     , postgresql-simple
  default-language:    Haskell2010

test-suite alignment-graphs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , alignment-graphs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eklinkhammer/alignment-graphs
